hphp/hack/test/typecheck/array/disallow_php_array_when_vector_like_array_is_required.php
<?hh // partial

function consumesArrayOfInt(array<int> $array): void {}

function providesArrayOfUnknown(): array {
  return varray["tingley"];
}

function test(): void {
  consumesArrayOfInt(providesArrayOfUnknown());
}
